// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_var LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "hide_var",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) call_after_init LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "call_after_init",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) warning_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "warning_message",
  "tcErrors": 0,
  "tcMessages": [
    "[warning] this is a deliberate test warning",
  ],
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) noinit LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "noinit",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_on_onlchange LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "init_on_onlchange",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_hex LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_hex",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_copy LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_copy",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "linkalways",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_check LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_check",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_instance_in_retain LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_instance_in_retain",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_all_locals LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "hide_all_locals",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_assign LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_assign",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "reflection",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unknown_attribute_typo LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Unknown attribute pragma 'qualifid_only'. User-defined attributes should use a vendor prefix to avoid collisions.",
  ],
  "lspWarnings": 1,
  "name": "unknown_attribute_typo",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) enable_dynamic_creation LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "enable_dynamic_creation",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "const_replaced",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_non_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "const_non_replaced",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) global_init_slot LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "global_init_slot",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_display LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "monitoring_display",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_encoding LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "monitoring_encoding",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) subsequent LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "subsequent",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "suppress_warning",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditionalshow LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditionalshow",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pingroup LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "pingroup",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) info_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "info_message",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) text_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "text_message",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) instance_path_with_reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "instance_path_with_reflection",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_bin LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_bin",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_dec LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_dec",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_invalid_value LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_invalid_value",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning_multi LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "suppress_warning_multi",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_init_aliases LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_init_aliases",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways_with_unused_pou LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "linkalways_with_unused_pou",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) region_basic LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Unknown pragma directive 'end_region}'",
  ],
  "lspWarnings": 1,
  "name": "region_basic",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) error_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "error_message",
  "tcErrors": 1,
  "tcMessages": [
    "[error] this is a deliberate test error",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_init_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_reinit_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_exit_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_wrong_return_type LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Init must return BOOL.",
  ],
  "lspWarnings": 0,
  "name": "fb_init_wrong_return_type",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Init requires VAR_INPUT parameter 'bInCopyCode : BOOL' at position 2.",
  ],
  "lspWarnings": 0,
  "name": "fb_init_missing_bInCopyCode",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Exit requires VAR_INPUT parameter 'bInCopyCode : BOOL' at position 1.",
  ],
  "lspWarnings": 0,
  "name": "fb_exit_missing_bInCopyCode",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_with_params LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Reinit does not accept extra VAR_INPUT parameters.",
  ],
  "lspWarnings": 0,
  "name": "fb_reinit_with_params",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_double_underscore LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] Identifiers starting with '__' are reserved for system-generated names",
  ],
  "lspWarnings": 0,
  "name": "identifier_double_underscore",
  "tcErrors": 5,
  "tcMessages": [
    "[error] Unexpected Token '__systemReserved' found",
    "[error] ';' expected instead of ':'",
    "[error] Unexpected Token ':' found",
    "[error] ';' expected instead of 'INT'",
    "[error] Unexpected Token 'INT' found",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_consecutive_underscores LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] Multiple consecutive underscores are not permitted in identifiers",
  ],
  "lspWarnings": 0,
  "name": "identifier_consecutive_underscores",
  "tcErrors": 5,
  "tcMessages": [
    "[error] Unexpected Token 'foo__bar' found",
    "[error] ';' expected instead of ':'",
    "[error] Unexpected Token ':' found",
    "[error] ';' expected instead of 'INT'",
    "[error] Unexpected Token 'INT' found",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_default_50000 LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Slot 50000 is reserved by CODESYS (Compiler: DEFAULT slot for user POUs (programs, FBs)). Pick a unique slot.",
  ],
  "lspWarnings": 1,
  "name": "init_slot_default_50000",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_alarm_manager LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Slot 30000 is reserved by CODESYS (Library: Alarm Manager / VisuFPlot / VisuTrendStorageAccess: Alarm + visu init). Pick a unique slot.",
  ],
  "lspWarnings": 1,
  "name": "init_slot_reserved_alarm_manager",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_device_object LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Slot 60000 is reserved by CODESYS (DeviceObject / TrendRecordingObject: Device FB instances + trend recording). Pick a unique slot.",
  ],
  "lspWarnings": 1,
  "name": "init_slot_reserved_device_object",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_user_early LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "init_slot_user_early",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_local_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[information] 'iCounter' shadows a same-name declaration in outer scope 'FB_LANG_shadowing_method_local_shadows_member'.",
  ],
  "lspWarnings": 0,
  "name": "shadowing_method_local_shadows_member",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_param_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[information] 'iValue' shadows a same-name declaration in outer scope 'FB_LANG_shadowing_method_param_shadows_member'.",
  ],
  "lspWarnings": 0,
  "name": "shadowing_method_param_shadows_member",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_int_to_real_valid",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_real_to_int_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_real_to_int_valid",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_int_to_real_wrong_source",
  "tcErrors": 1,
  "tcMessages": [
    "[error] Cannot convert type 'REAL' to type 'INT'",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_dint_to_int_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_dint_to_int_wrong_source",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_implicit_dint_to_int LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_implicit_dint_to_int",
  "tcErrors": 1,
  "tcMessages": [
    "[error] Cannot convert type 'DINT' to type 'INT'",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) duplicate_declaration LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] 'iCounter' is already declared in this scope",
  ],
  "lspWarnings": 0,
  "name": "duplicate_declaration",
  "tcErrors": 1,
  "tcMessages": [
    "[error] A local variable named 'iCounter' is already defined in 'FB_LANG_duplicate_declaration'",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unresolved_identifier_in_body LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "unresolved_identifier_in_body",
  "tcErrors": 2,
  "tcMessages": [
    "[error] Cannot convert type 'Unknown type: 'iThisIdentifierDoesNotExistAnywhere'' to type 'INT'",
    "[error] Identifier 'iThisIdentifierDoesNotExistAnywhere' not defined",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pragma_conflict_hide_plus_monitoring LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "pragma_conflict_hide_plus_monitoring",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;
